# strex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-ui.sh  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: release.yml
crates/strex-cli/: Cargo.toml
crates/strex-cli/src/: cli.rs  main.rs
crates/strex-cli/src/commands/: mod.rs  perf.rs  run.rs  ui.rs  validate.rs  validate_tests.rs
crates/strex-cli/src/output/: console.rs  json.rs  junit.rs  junit_tests.rs  mod.rs  perf.rs  perf_console.rs  perf_json.rs
crates/strex-core/: Cargo.toml
crates/strex-core/src/: assertions.rs  collection.rs  context.rs  data.rs  error.rs  http.rs  interpolation.rs  lib.rs  parser.rs  perf.rs  runner.rs
crates/strex-core/tests/: data_integration.rs  interpolation_integration.rs  parser_integration.rs  perf_integration.rs  runner_integration.rs
crates/strex-core/tests/fixtures/: anchors.yaml  duplicate_keys.yaml  missing_field.yaml  nesting_too_deep.yaml  unknown_field.yaml  valid.yaml  valid_with_body.yaml
crates/strex-import/: Cargo.toml
crates/strex-import/src/: curl.rs  error.rs  lib.rs  openapi.rs
crates/strex-script/: Cargo.toml
crates/strex-script/src/: api.rs  context.rs  error.rs  executor.rs  lib.rs
crates/strex-ui/: Cargo.toml  build.rs
crates/strex-ui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/strex-ui/frontend/src/: App.svelte
crates/strex-ui/frontend/src/components/: ConfigPanel.svelte  HistoryPanel.svelte  ImportModal.svelte  IterationSeparator.svelte  PerfHistoryPanel.svelte  PerfPanel.svelte  PerfView.svelte  RequestRow.svelte  ResultsPanel.svelte
crates/strex-ui/frontend/src/lib/: api.ts  types.ts  ws.ts
crates/strex-ui/src/: collections.rs  events.rs  history.rs  import.rs  lib.rs  perf_history.rs  request_list.rs  routes.rs  server.rs  ws.rs  ws_perf.rs
docs/: VALIDATION-REPORT.md
docs/adr/: 0001-project-architecture-and-tech-stack.md  0002-execution-model-and-error-taxonomy.md  0003-strex-yaml-subset-definition.md  0004-script-safety-model.md  README.md
docs/dev/: CODING_STANDARDS.md  DEFINITION_OF_DONE.md  ONBOARDING.md  TESTING.md  WORKFLOW.md
docs/superpowers/plans/: 2026-03-18-import-feature.md
docs/superpowers/specs/: 2026-03-16-request-body-visibility-design.md  2026-03-16-strex-ui-results-detail-design.md  2026-03-18-import-feature-design.md
docs/user/: CLI.md
examples/: README.md  data.json  jsonplaceholder.yaml  request-chaining.yaml  users-data.yaml
examples/tutorials/: 01-hello-world.yaml  02-assertions.yaml  03-variables-and-environment.yaml  04-request-chaining.yaml  05-scripting.yaml  06-data-driven.yaml  06-users.csv  06-users.json  07-on-failure.yaml  README.md
