[package]
name = "strex-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Michele961/strex"
homepage = "https://github.com/Michele961/strex"
description = "CLI-first API collection runner"
license = "MIT"

[[bin]]
name = "strex"
path = "src/main.rs"

[dependencies]
# Core library providing all HTTP, parsing, and runner functionality
strex-core = { path = "../strex-core" }
# Application-level error handling for the CLI binary
anyhow = "1"
# CLI argument parsing with derive macros
clap = { version = "4", features = ["derive"] }
# Async runtime for the binary entry point
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# JSON output format serialization
serde_json = "1"
# Walk serde_yaml::Value trees in the validate subcommand (transitive via strex-core, but must be declared to use the namespace)
serde_yaml = "0.9"

[dev-dependencies]
# Temporary files for validate integration tests
tempfile = "3"
# HTTP mock server for run subcommand integration tests
wiremock = "0.6"
