[package]
name = "strex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# JavaScript scripting engine — provides execute_script() for phases 2 and 5.
strex-script = { path = "../strex-script" }

# Typed error definitions for library crates (strex-core, strex-script)
thiserror = "1"

# Serde derive macros for data model structs
serde = { version = "1", features = ["derive"] }

# YAML deserialization — strict subset parsing; evaluate serde-yml migration post-MVP
serde_yaml = "0.9"

# Jaro-Winkler distance for "did you mean?" field name suggestions
strsim = "0.11"

# Async runtime — runner is fully async; "time" is needed for perf run timers and sleep
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# CancellationToken (tokio_util::sync) for broadcasting stop signals to concurrent VU tasks
tokio-util = { version = "0.7" }

# HTTP client — rustls for TLS (no OpenSSL dep), json feature for serde integration
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# JSON value manipulation
serde_json = "1"

# url: form_urlencoded::Serializer used in display_body to render form request bodies for UI display
url = "2"

# CSV parsing for data-driven testing (SP4); StringRecord-based, no serde features needed
csv = "1"

# RFC 9535-compliant JSONPath — actively maintained alternative to jsonpath_lib (0.6.x had internal version conflicts; using 0.7)
serde_json_path = "0.7"

[dev-dependencies]
# In-process HTTP mock server, no network required
wiremock = "0.6"

# Async test support (rt-multi-thread for #[tokio::test])
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Temporary file creation for parser regression tests
tempfile = "3"
