[package]
name = "strex-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async web framework — WebSocket support built in
axum = { version = "0.7", features = ["ws"] }
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Embed static files (Svelte dist) into the binary at compile time
rust-embed = "8"
# JSON serialization for API responses and WebSocket events
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Open the browser from Rust
open = "5"
# CORS and other HTTP middleware
tower-http = { version = "0.5", features = ["cors"] }
# MIME type detection for static file serving
mime_guess = "2"
# Collection runner — execute collections and stream results
strex-core = { path = "../strex-core" }
# HTTP client — shared per-run client for connection pooling across concurrent iterations
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Application-level error handling
anyhow = "1"
# Timestamp generation for run history filenames
chrono = "0.4"

[dev-dependencies]
# Temporary directories for integration tests
tempfile = "3"
